--- a/front-end/html&css/طراحی دیجیکالا/assets/css/style.css
+++ b/front-end/html&css/طراحی دیجیکالا/assets/css/style.css
@@ -33,6 +33,16 @@
   border: none;
 }
 
+.btn-nav-left {
+  border: solid 1px #d3d3d3;
+  border-radius: 50px;
+  width: 40px;
+  aspect-ratio: 1 / 1;
+  font-family: consolas;
+  font-weight: bold;
+  font-size: large;
+}
+
 .orange-secondary {
   width: 170px;
   height: 35px;
@@ -49,6 +59,7 @@
 header#website_header {
   position: fixed;
   background-color: white;
+  z-index: 1;
 }
 #top_ad_bar_gif {
   width: 100vw;
@@ -148,4 +159,51 @@ button#search_btn {
 
 #main-navigation_list > li:hover {
   border-bottom: solid 2px #ef394e;
+}
+
+/* main section of website */
+#website_main {
+  padding-top: 168px;
+}
+
+/* stories section of website */
+#stories_container {
+  display: flex;
+  gap: 24px;
+  padding-top: 15px;
+  padding-bottom: 20px;
+  width: 98%;
+  margin-right: 8px;
+  overflow: hidden;
+}
+
+.story {
+  display: flex;
+  flex-direction: column;
+}
+
+.story > p {
+  text-align: center;
+}
+
+.story-img-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  padding: 3px;
+  border: solid 2px #c34198;
+}
+
+.story-img {
+  width: 75px;
+  aspect-ratio: 1 / 1;
+  border-radius: 50%;
+}
+
+#stories_left_btn {
+  position: absolute;
+  right: auto;
+  top: 233px;
+  left: 25px;
 }
