reafactor use of inherit bg-color for search btn because realized that the color of btn differs from background in Firefox

--- a/front-end/html&css/طراحی دیجیکالا/assets/css/style.css
+++ b/front-end/html&css/طراحی دیجیکالا/assets/css/style.css
@@ -118,6 +118,7 @@ input#sercch_bar:focus {
 }
 
 button#search_btn {
+  background-color: inherit;
   width: 55px;
   border: none;
   border-radius: inherit;
