--- a/ASP.Net/image server/ImageServer.WPFClient/MainWindow.xaml
+++ b/ASP.Net/image server/ImageServer.WPFClient/MainWindow.xaml
@@ -1,6 +1,7 @@
 <Window x:Class="ImageServer.WPFClient.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:uc="clr-namespace:ImageServer.WPFClient.UserControls"
         Title="Image Server Client"
         Height="450"
         Width="800">
@@ -22,93 +23,10 @@
             </MenuItem>
         </Menu>
 
-        <ToolBarTray DockPanel.Dock="Top"
-                     Background="#F0F0F0">
-            <ToolBar Band="0">
-                <Button Command="{Binding UploadImageCommand}"
-                        ToolTip="Upload Image">
-                    <StackPanel Orientation="Horizontal">
-                        <Image Source="pack://application:,,,/Resources/upload.png"
-                               Width="16"
-                               Height="16"
-                               Margin="0,0,5,0"/>
-                        <TextBlock Text="Upload"/>
-                    </StackPanel>
-                </Button>
-                <Button Command="{Binding LoadImagesCommand}"
-                        ToolTip="Refresh">
-                    <StackPanel Orientation="Horizontal">
-                        <Image Source="pack://application:,,,/Resources/refresh.png"
-                               Width="16"
-                               Height="16"
-                               Margin="0,0,5,0"/>
-                        <TextBlock Text="Refresh"/>
-                    </StackPanel>
-                </Button>
-            </ToolBar>
-        </ToolBarTray>
+        <uc:MainToolbar DockPanel.Dock="Top"/>
 
         <Grid>
-            <ScrollViewer VerticalScrollBarVisibility="Auto">
-                <ItemsControl ItemsSource="{Binding Images}">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <WrapPanel Orientation="Horizontal"/>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <Border Margin="10"
-                                    BorderThickness="1"
-                                    BorderBrush="#DDDDDD"
-                                    Background="White"
-                                    Width="200"
-                                    Height="280"
-                                    CornerRadius="5">
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="200"/>
-                                        <RowDefinition Height="Auto"/>
-                                        <RowDefinition Height="Auto"/>
-                                    </Grid.RowDefinitions>
-
-                                    <Image Grid.Row="0"
-                                           Source="{Binding ThumbnailUrl}"
-                                           Stretch="Uniform"
-                                           Margin="5"/>
-
-                                    <TextBlock Grid.Row="1"
-                                               Text="{Binding Name}"
-                                               FontWeight="SemiBold"
-                                               Margin="10,5"
-                                               TextWrapping="Wrap"
-                                               TextAlignment="Center"/>
-
-                                    <StackPanel Grid.Row="2"
-                                                Margin="5">
-                                        <TextBlock Text="{Binding FileSize, StringFormat='{}{0:N0} bytes'}"
-                                                   FontSize="11"
-                                                   Foreground="Gray"
-                                                   TextAlignment="Center"/>
-                                        <Button Command="{Binding DataContext.DeleteImageCommand, 
-                                                RelativeSource={RelativeSource AncestorType=ItemsControl}}"
-                                                CommandParameter="{Binding}"
-                                                Margin="5">
-                                            <StackPanel Orientation="Horizontal">
-                                                <Image Source="pack://application:,,,/Resources/delete.png"
-                                                       Width="14"
-                                                       Height="14"
-                                                       Margin="0,0,5,0"/>
-                                                <TextBlock Text="Delete"/>
-                                            </StackPanel>
-                                        </Button>
-                                    </StackPanel>
-                                </Grid>
-                            </Border>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-            </ScrollViewer>
+            <uc:ImageGrid/>
 
             <Grid Background="#80000000"
                   Visibility="{Binding IsLoading, Converter={StaticResource BooleanToVisibilityConverter}}">
