--- a/ASP.Net/image server/ImageServer.WPFClient/UserControls/ImageGrid.xaml
+++ b/ASP.Net/image server/ImageServer.WPFClient/UserControls/ImageGrid.xaml
@@ -1,6 +1,7 @@
 <UserControl x:Class="ImageServer.WPFClient.UserControls.ImageGrid"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="clr-namespace:ImageServer.WPFClient.UserControls">
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <ItemsControl ItemsSource="{Binding Images}">
             <ItemsControl.ItemsPanel>
@@ -10,53 +11,7 @@
             </ItemsControl.ItemsPanel>
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <Border Margin="10"
-                            BorderThickness="1"
-                            BorderBrush="#DDDDDD"
-                            Background="White"
-                            Width="200"
-                            Height="280"
-                            CornerRadius="5">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="200"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                            </Grid.RowDefinitions>
-
-                            <Image Grid.Row="0"
-                                   Source="{Binding ThumbnailUrl}"
-                                   Stretch="Uniform"
-                                   Margin="5"/>
-
-                            <TextBlock Grid.Row="1"
-                                       Text="{Binding Name}"
-                                       FontWeight="SemiBold"
-                                       Margin="10,5"
-                                       TextWrapping="Wrap"
-                                       TextAlignment="Center"/>
-
-                            <StackPanel Grid.Row="2"
-                                        Margin="5">
-                                <TextBlock Text="{Binding FileSize, StringFormat='{}{0:N0} bytes'}"
-                                           FontSize="11"
-                                           Foreground="Gray"
-                                           TextAlignment="Center"/>
-                                <Button Command="{Binding DataContext.DeleteImageCommand, 
-                                        RelativeSource={RelativeSource AncestorType=ItemsControl}}"
-                                        CommandParameter="{Binding}"
-                                        Margin="5">
-                                    <StackPanel Orientation="Horizontal">
-                                        <Image Source="pack://application:,,,/Resources/delete.png"
-                                               Width="14"
-                                               Height="14"
-                                               Margin="0,0,5,0"/>
-                                        <TextBlock Text="Delete"/>
-                                    </StackPanel>
-                                </Button>
-                            </StackPanel>
-                        </Grid>
-                    </Border>
+                    <local:ImageCard/>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
