--- a/ASP.Net/image server/ImageServer.WPFClient/UserControls/MainToolbar.xaml
+++ b/ASP.Net/image server/ImageServer.WPFClient/UserControls/MainToolbar.xaml
@@ -1,28 +1,17 @@
 <UserControl x:Class="ImageServer.WPFClient.UserControls.MainToolbar"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="clr-namespace:ImageServer.WPFClient.UserControls">
     <ToolBarTray Background="#F0F0F0">
         <ToolBar Band="0">
-            <Button Command="{Binding UploadImageCommand}"
-                    ToolTip="Upload Image">
-                <StackPanel Orientation="Horizontal">
-                    <Image Source="pack://application:,,,/Resources/upload.png"
-                           Width="16"
-                           Height="16"
-                           Margin="0,0,5,0"/>
-                    <TextBlock Text="Upload"/>
-                </StackPanel>
-            </Button>
-            <Button Command="{Binding LoadImagesCommand}"
-                    ToolTip="Refresh">
-                <StackPanel Orientation="Horizontal">
-                    <Image Source="pack://application:,,,/Resources/refresh.png"
-                           Width="16"
-                           Height="16"
-                           Margin="0,0,5,0"/>
-                    <TextBlock Text="Refresh"/>
-                </StackPanel>
-            </Button>
+            <local:ToolbarButton Command="{Binding UploadImageCommand}"
+                                 Text="Upload"
+                                 ToolTip="Upload Image"
+                                 ImageSource="pack://application:,,,/Resources/upload.png"/>
+            <local:ToolbarButton Command="{Binding LoadImagesCommand}"
+                                 Text="Refresh"
+                                 ToolTip="Refresh"
+                                 ImageSource="pack://application:,,,/Resources/refresh.png"/>
         </ToolBar>
     </ToolBarTray>
 </UserControl>
