--- a/ASP.Net/image server/ImageServer.WPFClient/UserControls/RibbonTabPanel.xaml
+++ b/ASP.Net/image server/ImageServer.WPFClient/UserControls/RibbonTabPanel.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <TabControl Style="{StaticResource {x:Type TabControl}}"
-                Background="#F0F0F0">
+                Background="#f3f3f3">
         <TabItem Header="Home">
             <StackPanel Orientation="Horizontal">
                 <GroupBox Header="Images"
